--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,9 @@
 {% block title %} Login {% endblock %}
 {% block content %}
     <h2> Login </h2>
+    <p><a href="{% url 'social:begin' 'github' %}">Sign in with GitHub</a></p>
+    <p><a href="{% url 'social:begin' 'google-oauth2' %}">Sign in with Google</a></p>
+
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
