--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -13,15 +13,17 @@
                 {{ post.title }}
             </a>
         </h2>
-        <div class="row">
+
             {% if post.tags.all %}
             Tags:
             {% for tag in post.tags.all %}
-                <a class="badge bg-secondary text-decoration-none link-light" href='{% url "blog:post_list_by_tag" tag.slug %}'>{{ tag.name }}</a>
+                <a class="badge bg-secondary text-decoration-none link-light" href="{% url "blog:post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
                 {% if not forloop.last %}, {% endif %}
             {% endfor %}
         {% endif %}
-        </div>
+
         <div class="text-muted fst-italic mb-2">
             Published {{ post.publish }} by {{ post.author }}
         </div>
