--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -90,6 +90,22 @@
                     {% endfor %}
                 </div>
             </div>
+            <div class="card mb-4">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action active" aria-current="true">
+                        API
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="api/">
+                        API control
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="api/schema/redoc/">
+                        Redoc
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="api/schema/swagger-ui/">
+                        Swagger-UI
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
